Add favicon link to index.html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YSCode | YallStudioCode</title>
+    <!-- My Own Icon on the site -->
+    <link rel="icon" href="icon.png" type="image/png">
     <!-- Tailwind for Layout -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Prism.js for Syntax Highlighting -->
